@@ -5,7 +5,8 @@ CHANGES
 2.3.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Get error log from the portal and don't fail if error log not found.
+  [enfold-josh]
 
 
 2.3.1 (2024-04-24)
